# luaScanner

./: CMakeLists.txt  main.cpp
examples/: all.lua  all_results.txt  sample.lua  sample_result.txt
